--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,19 @@
-@import "tailwindcss";
-@plugin "daisyui";
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+@import "tailwindcss";
+@plugin "daisyui" {
+    themes: light --default;
+};
+
+
+@plugin "daisyui/theme" {
+    name: "light";
+    default: true;
+    --color-primary: #CAEB66;
+}
+
 
 
 @theme {
-    --color-primary-color: #CAEB66;
     --font-urbanist: "Urbanist", sans-serif;
     --font-inter: "Inter", sans-serif;
     --color-dark-gray: #606060;
